Fix z-index layering issue

--- a/src/Window/CodeBox.css
+++ b/src/Window/CodeBox.css
@@ -8,7 +8,7 @@
   padding-bottom: 0.4em;
   margin-bottom: -1.4em;
   position: relative;
-  z-index: 1000;
+  z-index: 199;
 }
 
 .tab {
